css/style.css
* {
	box-sizing: border-box;
}
body {
	color: white;
	background-color: #1c2431;
	background-image: linear-gradient(#1c2431, #181f2b, #181f2b);
	font-family: "Open Sans", sans-serif;
	padding: 0;
	margin: 0;
	font-size: 14px;
}
header {
	display: flex;
	justify-content: space-between;
	font-family: "Raleway", sans-serif;
	padding: 30px;
}

nav a {
	padding: 20px;
}
a:link,
a:visited {
	color: white;
	text-decoration: none;
}
a:hover {
	color: #65e2d9;
	text-decoration: none;
}
main {
	background-image: url("/images/bg-curvy-desktop.svg");
	background-repeat: no-repeat;
	background-position: top center;
}
.top-image {
	text-align: center;
}
.top-image img {
	height: 300px;
}
.top-section {
	text-align: center;
	margin: auto;
	width: 45%;
}
.curvy {
	position: absolute;
	bottom: -1px;
	z-index: -1;
}
.curvy img {
	width: 100%;
}
button {
	border-radius: 42px;
	background-color: #65e2d9;
	border: 1px solid #65e2d9;
	display: inline-block;
	cursor: pointer;
	color: #ffffff;
	font-weight: bold;
	font-size: 15px;
	padding: 10px 50px;
}
.row-1,
.row-2 {
	display: flex;
	justify-content: center;
	margin-top: 100px;
}
.row-1 > div,
.row-2 > div {
	width: 30%;
	margin: 10px;
	text-align: center;
}
.stay-productive img {
	width: 90%;
	height: auto;
}
.mid-section-2 {
	display: flex;
	justify-content: center;
	padding-top: 100px;
	align-items: center;
}
.mid-section-2 > div {
	width: 40%;
	margin: 5px;
}
a.flyo-works {
	color: #62e0d9;
	border-bottom: 1px solid#62e0d9;
}
.profile {
	width: 300px;
	border-radius: 10px;
	background-color: #202a3c;
	padding: 5px 15px;
	margin: 5px;
	box-shadow: 0px 0px 64px -24px rgba(0, 0, 0, 0.75);
}
.profile img {
	border-radius: 50%;
	width: 60px;
	float: left;
	margin-right: 15px;
}
.mid-section-3 {
	margin: 70px;
	margin-top: 10px;
	display: flex;
	justify-content: space-around;
	flex-wrap: wrap;
	flex-direction: row;
}
.quotes {
	margin-top: 100px;
	position: relative;
	left: 80px;
	top: 40px;
}

.profile-name {
	font-weight: bold;
	line-height: 0 px;
	padding-top: 8px;
}
.profile-position {
	line-height: 0px;
	margin: 0px;
}
.get-access {
	text-align: center;
	width: 63%;
	padding: 25px;
	margin: 0 auto;
	background-color: #202a3c;
	box-shadow: 0px 0px 64px -24px rgba(0, 0, 0, 0.55);
	position: relative;
	bottom: -80px;
}
.get-button {
	padding: 7px 20px;
}
.email {
	margin-right: 12px;
	margin-bottom: 10px;
	border-radius: 42px;
	padding: 10px;
	padding-left: 20px;
	font-size: 15px;
	width: 300px;
}
.last-section {
	background-color: #0b1523;
}
.lorem {
	display: inline-flex;
}
.lorm {
	width: 20px;
	height: 20px;
	margin-right: 15px;
	margin-top: 15px;
}
.img-logo {
	margin-top: 150px;
	margin-bottom: 30px;
	margin-left: 30px;
}
.last-flex {
	display: flex;
	height: 200px;
	justify-content: space-around;
}
.last-flex > div {
	width: 170px;
}

.icon-phone,
.icon-email {
	padding-right: 10px;
}
ul {
	list-style: none;
	padding-inline-start: 0px;
}
li {
	padding-bottom: 4px;
}
.font-awesome {
	padding-top: 5px;
}
.font-awesome a {
	margin: 5px;
	padding: 5px;
	width: 30px;
	height: 30px;
	border: 1px solid white;
	border-radius: 50%;
	font-size: 13px;
}
footer {
	background-color: #0b1523;
}
.attribution {
	font-size: 11px;
	text-align: center;
	margin: 0;
	padding: 0;
}
.attribution a {
	color: hsl(228, 45%, 44%);
}

@media only screen and (max-width: 984px) {
	.get-button {
		padding: 10px 50px;
		width: 300px;
	}
}
@media only screen and (max-width: 945px) {
	.last-flex {
		margin-left: 10px;
	}
	.img-logo {
		margin-left: 15px;
	}
}

@media only screen and (max-width: 820px) {
	.last-flex {
		display: block;
		height: auto;
		margin: 25px;
		margin-bottom: 0;
	}
	.lorem {
		display: inline-flex;
	}
	ul {
		margin-top: 60px;
	}
	li {
		padding-bottom: 15px;
	}
	.font-awesome {
		text-align: center;
		margin: 0 auto;
		padding: 20px;
	}

	.row-1,
	.row-2 {
		flex-direction: column;
		align-items: center;
	}
	.row-1 > div,
	.row-2 > div {
		margin: 50px;
	}
	.row-2 {
		margin-top: 30px;
	}
	.mid-section-2 {
		flex-direction: column;
	}

	.stay-productive img {
		width: 350px;
		height: auto;
	}
	.mid-section-2 > div {
		width: 50%;
	}
}
@media only screen and (max-width: 610px) {
	.get-button {
		padding: 7px 5px;
		width: 80%;
	}
	button {
		padding: 7px 19px;
	}
	.email {
		width: 80%;
		font-size: 11px;
	}
	.stay-productive img {
		width: 300px;
	}
}
@media only screen and (max-width: 560px) {
	body {
		font-size: 10px;
	}
	.email {
		font-size: 8px;
	}
	button,
	.get-button {
		font-size: 9px;
	}
	.logo {
		width: 110px;
	}
	.top-image img {
		height: 200px;
	}
	header {
		justify-content: space-between;
		padding: 20px;
	}
	nav a {
		padding: 5px;
	}
	.stay-productive img {
		width: 200px;
	}
	.row-1 > div,
	.row-2 > div {
		margin: 20px;
	}
	.quotes img {
		width: 30px;
	}
}

